--- a/Polara/Polara/Storyboards/ContactCell.xib
+++ b/Polara/Polara/Storyboards/ContactCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -16,52 +16,65 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="zYs-Ms-ArG">
-                        <rect key="frame" x="20" y="27.5" width="220" height="60"/>
+                        <rect key="frame" x="73" y="36.5" width="144.5" height="42.5"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contact Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Kh-7x-Rp3">
-                                <rect key="frame" x="0.0" y="0.0" width="220" height="39.5"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="33"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Friend Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Kh-7x-Rp3">
+                                <rect key="frame" x="0.0" y="0.0" width="125" height="25.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contact Phone Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bP4-Nc-4h6">
-                                <rect key="frame" x="0.0" y="39.5" width="191" height="20.5"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Friend Phone Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bP4-Nc-4h6">
+                                <rect key="frame" x="0.0" y="25.5" width="144.5" height="17"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                     </stackView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c4f-t8-rLx">
-                        <rect key="frame" x="279" y="37.5" width="115" height="40"/>
+                        <rect key="frame" x="294" y="37.5" width="100" height="40"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="115" id="6Vt-nE-DWa"/>
                             <constraint firstAttribute="height" constant="40" id="RWU-Qa-11E"/>
+                            <constraint firstAttribute="width" constant="100" id="SU3-7a-VYc"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                         <inset key="contentEdgeInsets" minX="16" minY="16" maxX="16" maxY="16"/>
-                        <state key="normal" title="BLOCKED">
+                        <state key="normal" title="Blocked">
                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </state>
                         <connections>
                             <action selector="cellButtonTapped:" destination="ckf-Ov-VaV" eventType="touchUpInside" id="Ntz-Cf-ixD"/>
                         </connections>
                     </button>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Glyph Account" translatesAutoresizingMaskIntoConstraints="NO" id="FGI-Z4-MkC">
+                        <rect key="frame" x="20" y="35" width="45" height="45"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="45" id="GY8-Rt-9DX"/>
+                            <constraint firstAttribute="width" constant="45" id="Rrk-NN-5kF"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="c4f-t8-rLx" firstAttribute="centerY" secondItem="eMc-d4-AGw" secondAttribute="centerY" id="L5R-fp-5Ic"/>
                     <constraint firstAttribute="trailing" secondItem="c4f-t8-rLx" secondAttribute="trailing" constant="20" id="RyP-1J-puU"/>
-                    <constraint firstItem="zYs-Ms-ArG" firstAttribute="leading" secondItem="eMc-d4-AGw" secondAttribute="leading" constant="20" id="nlf-iX-d03"/>
+                    <constraint firstItem="FGI-Z4-MkC" firstAttribute="leading" secondItem="eMc-d4-AGw" secondAttribute="leading" constant="20" id="jNE-KI-oVl"/>
+                    <constraint firstItem="zYs-Ms-ArG" firstAttribute="leading" secondItem="FGI-Z4-MkC" secondAttribute="trailing" constant="8" id="rMe-Gb-VYx"/>
                     <constraint firstItem="zYs-Ms-ArG" firstAttribute="centerY" secondItem="eMc-d4-AGw" secondAttribute="centerY" id="uIh-3F-cAd"/>
+                    <constraint firstItem="FGI-Z4-MkC" firstAttribute="centerY" secondItem="eMc-d4-AGw" secondAttribute="centerY" id="zOk-7v-XUB"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="cellButton" destination="c4f-t8-rLx" id="7PX-Uz-Ffu"/>
                 <outlet property="contactNameLabel" destination="7Kh-7x-Rp3" id="DyE-hP-fnt"/>
                 <outlet property="contactPhoneNumberLabel" destination="bP4-Nc-4h6" id="4nz-cz-OcL"/>
+                <outlet property="profileImage" destination="FGI-Z4-MkC" id="OCE-u6-Gyf"/>
             </connections>
             <point key="canvasLocation" x="100.00000000000001" y="165.73660714285714"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="Glyph Account" width="29" height="29"/>
+    </resources>
 </document>
